Changes for templates:

	* Changed SSH options so host keys are accepted automatically (issue 68).
	* Added a debugging log for ss_get_mysql_stats.php (issue 54).
	* Added the --lint_check option to make-template.pl (issue 80).
	* Removed the use of GET_LOCK() and changed to flock() instead (issue 78).
	* The template and script version is now recorded in a GPRINT (issue 79).
	* Restored unflushed_log, which was accidentally deleted in 1.1.3.
	* Added the InnoDB Checkpoint Age graph (issue 73).
	* Added the InnoDB Insert Buffer Usage graph (issue 74).
	* Added the InnoDB Active/Locked Transactions graph.
	* Added the InnoDB Memory Allocation graph.
	* Added the InnoDB Adaptive Hash Index graph.
	* Added the InnoDB Tables In Use graph (issue 32).
	* Added the InnoDB Current Lock Waits graph.
	* Added the InnoDB Lock Structures graph (issue 32).

2009-10-24: version 1.1.3

	* This is a bug-fix release only, and contains no template changes.
	* To upgrade from the previous release, upgrade ss_get_mysql_stats.php.
	* MySQL 5.1 broke backwards compatibility with table_cache (issue 63).
	* Added a version number to the script (partial fix for issue 79).
	* Added a test suite (issue 76, issue 59).
	* Math operations were done in MySQL instead of PHP (issue 25).
	* SHOW STATUS values didn't override SHOW INNODB STATUS parsing (issue 24).
	* Long error messages were not appearing in the Cacti log.
	* SHOW INNODB STATUS parsing for unpurged_txns was broken.
	* SHOW INNODB STATUS parsing for innodb_lock_structs was broken.
	* SHOW INNODB STATUS parsing for pending_log_flushes was broken (issue 62).
	* SHOW INNODB STATUS parsing for pending_buf_pool_flushes was broken.
	* SHOW INNODB STATUS parsing for pending_ibuf_aio_reads was broken.
	* SHOW INNODB STATUS parsing for pending_aio_log_ios was broken.
	* SHOW INNODB STATUS parsing for pending_aio_sync_ios was broken.
	* Made SHOW INNODB STATUS parsing less sensitive to false positive matches.

2009-05-07: version 1.1.2
