@@ -1926,6 +1926,121 @@
             },
          ],
       },
+      {  name => 'InnoDB Internal Hash Memory Usage',
+         base_value => '1024',
+         hash  => 'hash_00_VER_bd6e10d20ca21ed1aff72bc9ad9ce429',
+         dt         => {
+            input => 'Get MySQL Stats',
+            hash  => 'hash_01_VER_f553ec61580f9b5ce6b39bc7de218a09',
+            adaptive_hash_memory => {
+               data_source_type_id => '1',
+               hash => 'hash_08_VER_f371d57c78e5cec707934076adb7ce6f',
+            },
+            page_hash_memory => {
+               data_source_type_id => '1',
+               hash => 'hash_08_VER_8f256d1f6379d41c1185a09f0dec5d95',
+            },
+            dictionary_cache_memory => {
+               data_source_type_id => '1',
+               hash => 'hash_08_VER_005921dea6fe2fc6206f84c91256abe8',
+            },
+            file_system_memory => {
+               data_source_type_id => '1',
+               hash => 'hash_08_VER_786dda80f4d7f39f74c7fc1872d19cd2',
+            },
+            lock_system_memory => {
+               data_source_type_id => '1',
+               hash => 'hash_08_VER_c8fc68e098b25acfae2a4ab9986baa8e',
+            },
+            recovery_system_memory => {
+               data_source_type_id => '1',
+               hash => 'hash_08_VER_81337834441e772be28d91159e1d1838',
+            },
+            thread_hash_memory => {
+               data_source_type_id => '1',
+               hash => 'hash_08_VER_d50503865efb68c754d6a659089a8273',
+            },
+         },
+         items => [
+            {  color  => '793A57',
+               hashes => [
+                  'hash_10_VER_63a310dc9339b7f10c47d9761196bf4d',
+                  'hash_10_VER_630b59f846deebdcf8379edeb3e53670',
+                  'hash_10_VER_1f3795f4e95d0eb7e6fd90a8c02884f2',
+                  'hash_10_VER_30cb8a77fd3386c4177cf3a40ad1b944',
+               ],
+               item => 'adaptive_hash_memory',
+               task => 'hash_09_VER_72147268f5d6bf92bd60f9244143b495',
+               type => 'AREA',
+            },
+            {  color  => '8C873E',
+               hashes => [
+                  'hash_10_VER_85989ba7392acc1ae764cef76960701d',
+                  'hash_10_VER_1b8267e2ddf81459c1f3c377c2a23b88',
+                  'hash_10_VER_3bd861a08f76b610ab395109f5ee406f',
+                  'hash_10_VER_6705b66a17d9ede86437c61b4386ab4d',
+               ],
+               item => 'page_hash_memory',
+               task => 'hash_09_VER_c4f8c8cbcd731ea2eb2d459b1fc3bd68',
+               type => 'STACK',
+            },
+            {  color  => 'D1C5A5',
+               hashes => [
+                  'hash_10_VER_ea36d71fd9b3e4c7886d74d7543d2226',
+                  'hash_10_VER_1e05af0a8e28454101d04b4aadbf8deb',
+                  'hash_10_VER_d8e93b989316a660acf676933a68cc47',
+                  'hash_10_VER_51ed34bb59e4586c3c1e92318b7ab0f2',
+               ],
+               item => 'dictionary_cache_memory',
+               task => 'hash_09_VER_5c242f7dc54f4d1d539e2ac68c6743eb',
+               type => 'STACK',
+            },
+            {  color  => '4D3339',
+               hashes => [
+                  'hash_10_VER_70a8dd6d6eb9823bf310f58c6afaf7d6',
+                  'hash_10_VER_144d56ef7bcd6402583dcbc7fc628350',
+                  'hash_10_VER_a6322b11ccdc403f6b0f36e907e45ed0',
+                  'hash_10_VER_0f7aae872217aba0aab873d534d85f58',
+               ],
+               item => 'file_system_memory',
+               task => 'hash_09_VER_ee7352543a61f21af4ae9a4087cc15d6',
+               type => 'STACK',
+            },
+            {  color  => 'A38A5F',
+               hashes => [
+                  'hash_10_VER_729f04994479fd089be832c92a72389e',
+                  'hash_10_VER_6b7749d58f0b009d1ac62c8524fe6e44',
+                  'hash_10_VER_2e995517fae725371e4acb0d7bb99cfe',
+                  'hash_10_VER_02820480d00282e2ec768aceddc3c22e',
+               ],
+               item => 'lock_system_memory',
+               task => 'hash_09_VER_945ed9d00d28ed4cf62f382524ca41e7',
+               type => 'STACK',
+            },
+            {  color  => 'E97F02',
+               hashes => [
+                  'hash_10_VER_7b6953f8ebe4836fe31db6e55f821349',
+                  'hash_10_VER_108e43f0df54c13603a56c0f6e48f684',
+                  'hash_10_VER_cf086a61d1fc50451cb21475ece123a9',
+                  'hash_10_VER_a9829bdc0689b4d0b79e6516ff20a106',
+               ],
+               item => 'recovery_system_memory',
+               task => 'hash_09_VER_54ef0a0d73f842c2bc4efb4c1b916762',
+               type => 'STACK',
+            },
+            {  color  => '23B0BA',
+               hashes => [
+                  'hash_10_VER_0cbeb4e296eeaaff0f701237b2581dea',
+                  'hash_10_VER_ad981a84e6115349fbc7a54d676bb38f',
+                  'hash_10_VER_5945fe9b1d54ca80a46fd0612c0288df',
+                  'hash_10_VER_8bb043d21b2291ab264ed968f9e5612e',
+               ],
+               item => 'thread_hash_memory',
+               task => 'hash_09_VER_88f80d0d1380d76596569811045ea280',
+               type => 'STACK',
+            },
+         ],
+      },
       {  name => 'InnoDB Tables In Use',
          base_value => '1000',
          hash  => 'hash_00_VER_72c1917ad86b8c705ce87ab54911afb9',
@@ -2727,6 +2842,13 @@
             ibuf_cell_count            => 'hash_07_VER_af210dfa133a405ec94c7c4f6ff7b357',
             ibuf_used_cells            => 'hash_07_VER_14736a4af45c543245bda9f649598035',
             ibuf_free_cells            => 'hash_07_VER_fd38ab6c2dccadac35079d48a5171ab8',
+            adaptive_hash_memory       => 'hash_07_VER_e08109bd5c3a7432cdfc26049a7482ea',
+            page_hash_memory           => 'hash_07_VER_ec7916199240f7dfb324ea920f56f83d',
+            dictionary_cache_memory    => 'hash_07_VER_17bef5e5b603469fcd92061c9025e9ae',
+            file_system_memory         => 'hash_07_VER_b0103113450e13c3b3ea19fa5e153ad1',
+            lock_system_memory         => 'hash_07_VER_54486eaaedede6d14c7de6dafcc64b33',
+            recovery_system_memory     => 'hash_07_VER_7a94297b1c34a81e88be5f5b8cda6ec2',
+            thread_hash_memory         => 'hash_07_VER_268e082bc9cbcf84096010ec2fbd64cc',
          },
          type_id => 1
       },
